--- a/index.html
+++ b/index.html
@@ -4,12 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=-, initial-scale=1.0">
-    <title>Portal de Notícias galáticas</title>
+    <title>Pokedex Atributes</title>
     <link rel="stylesheet" href="styles/card.css">
-    <!--Aqui é feito a referência do arquivo css, que modifica este html-->
-    <script src="src/Components/CardNews.js" defer></script>
-    <!--Aqui é dito para o html importar o conteúdo do javascript, forncecendo o local-->
-    <script src="src/Components/TituloDinamico.js" defer></script>
 </head>
 
 <body>
