--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=-, initial-scale=1.0">
     <title>Pokedex Atributes</title>
     <link rel="stylesheet" href="styles/card.css">
+    <script src="src/Component/cap.js" defer></script>
 </head>
 
 <body>
